return and sort on ranks from lineage
