# src/api/v0/queries/queryFragments/setSortOrder.js
@@ -1,3 +1,15 @@
+const ranks = {
+  superkingdom: true,
+  kingdom: true,
+  phylum: true,
+  class: true,
+  order: true,
+  family: true,
+  genus: true,
+  species: true,
+  subspecies: true,
+};
+
 export const setSortOrder = (sortBy, typesMap) => {
   if (sortBy) {
     if (sortBy.by == "scientific_name" || sortBy.by == "taxon_id") {
@@ -9,7 +21,22 @@ export const setSortOrder = (sortBy, typesMap) => {
           },
         },
       ];
-    } else {
+    } else if (ranks[sortBy.by]) {
+      return [
+        {
+          [`lineage.scientific_name`]: {
+            mode: sortBy.mode || "max",
+            order: sortBy.order || "asc",
+            nested: {
+              path: "lineage",
+              filter: {
+                term: { "lineage.taxon_rank": sortBy.by },
+              },
+            },
+          },
+        },
+      ];
+    } else if (typesMap[sortBy.by]) {
       return [
         {
           [`attributes.${typesMap[sortBy.by].type}_value`]: {
